# language-brain

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.test  README.md  deadcode_analysis.py  package.json  pyproject.toml
.specs/: My-Reveiew.md  Note-for-next.md  SPEC.v0.2.md  _hill_climb.md  _traces.md  language-brain.md  v0.4-backlog.md  v0.5-bounded-tags-and-optional-ai.md  v0.5-storage-and-dict.md
.specs/design/: design-t28.md
.specs/notes/: My-Reveiew.md  Note-for-next.md
.specs/sessions/: fix-plan.md  functional-test-session.md
.specs/versions/: docs-rewrite-v1.md  v0.10-sqlite-read-paths.md  v0.4-backlog.md  v0.5-storage-and-dict.md  v0.7-vault-by-category.md
api/: __init__.py  bootstrap.py  config.py  main.py  schemas.py
api/routes/: add_sentence.py  commit_sentence.py  edit_sentence.py  edit_word.py  pinyin.py  search.py  units.py  vault.py  version.py
api/services/: ai_client.py  antonym_resolver.py  antonym_service.py  connector.py  db.py  (+13 more)
app/: .env  .gitignore  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
docs/: runbook.md  usage.md
ops/: deploy.sh  deploy.sh.env.example
scripts/: backfill_word_english.py  benchmark_search.py  build_dictionary.py  check_no_secrets.sh  cleanup_orphan_words.py  dump_vault_sqlite.py  fix_compound_types.py  fix_dangling_refs.py  migrate_assign_ids.py  migrate_json_to_sqlite.py  migrate_slug_stragglers.py  reconcile_to_dict_ids.py  reindex.py  repair_post_migration.py  repair_word_units.py  vault_check.py
tests/: __init__.py
(+155 files in other folders)
