[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "language-brain"
version = "0.1.0"
description = "Local-first knowledge graph of Chinese language units (sentences, words, groups)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [
  { name = "Language Brain" },
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "jieba>=0.42",
  "pypinyin>=0.51",
  "sentence-transformers>=3.0",
  "faiss-cpu>=1.8",
  "numpy>=1.26",
  "requests>=2.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "mypy>=1.10",
]

[project.scripts]
language-brain-api = "api.main:run"

[tool.setuptools.packages.find]
include = ["api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true
